# dirdemo

./: .gitignore  CMakeLists.txt  dirdemo.pro  directory_controller.cpp  directory_controller.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  repository.cpp  repository.h  scanningprogress.cpp  scanningprogress.ui
src/: TreeItem.cpp  TreeItem.h  TreeModel.cpp  TreeModel.h  directory_controller.cpp  directory_controller.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  scanningprogress.h  src.pro  ui_mainwindow.h
tests/: tests.pro  tst_test.cpp  tst_test.h
tests/test_folder_1/: Google GPA (3).nopdf
